# dq-project

./: .gitignore  .user.yml  Makefile  docker-compose.yml  pyproject.toml
.envs/.local/: .mysql
base-images/hadoop/: Dockerfile
base-images/hive/: Dockerfile
conf/hadoop/: core-site.xml  hdfs-site.xml  mapred-site.xml  yarn-site.xml
conf/hive/: hive-site.xml
conf/trino/: config.properties
dbts/: .user.yml  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbts/models/src/: schema.yml
dbts/models/staging/: test.py
dbts/seeds/: properties.yml
dbts/tests/: dim_listing_minimum.sql
docker/hadoop/: Dockerfile
docker/hadoop/conf/: core-site.xml  hdfs-site.xml
docker/hadoop/datanode/: start-datanode.sh
docker/hadoop/namenode/: start-namenode.sh
docker/hive/: Dockerfile
docker/impala/: Dockerfile
docker/trino/: Dockerfile
init-sql/trino/: test_code_1.sql
sql/: category_check.sql  range_check.sql
