[tool.poetry]
name = "dq-project"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dbt-trino = "^1.8.0"


[tool.poetry.group.dev.dependencies]
sqlfluff = "^3.0.6"
ruff = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
